<?xml version="1.0"?>
<package>
    <name>ssl_ai</name>
    <version>0.0.0</version>
    <description>Rhoban AI for SSL</description>

    <maintainer email="g.passault@gmail.com">Grégoire Passault</maintainer>

    <license>GPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>RhobanUtils</build_depend> <!-- rhobanproject/rhobanutils -->
    <build_depend>ssl_client</build_depend>

    <run_depend>RhobanUtils</run_depend>
    <run_depend>ssl_client</run_depend>
</package>
