<?xml version="1.0"?>
<package>
    <name>ssl_ai</name>
    <version>0.0.0</version>
    <description>Rhoban AI for SSL</description>

    <maintainer email="g.passault@gmail.com">Grégoire Passault</maintainer>

    <license>GPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rhoban_geometry</build_depend> <!-- rhoban/geometry -->
    <build_depend>ssl_client</build_depend>
    <build_depend>eigen</build_depend> <!-- rhobandeps/eigen -->
    <build_depend>tclap</build_depend> <!-- rhobandeps/tclap -->

    <run_depend>rhoban_geometry</run_depend>
    <run_depend>eigen</run_depend>
    <run_depend>ssl_client</run_depend>
    <run_depend>tclap</run_depend>
</package>
