<?xml version="1.0"?>
<package>
    <name>ssl_ai</name>
    <version>0.0.0</version>
    <description>Rhoban AI for SSL</description>

    <maintainer email="g.passault@gmail.com">Grégoire Passault</maintainer>

    <license>GPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rhoban_geometry</build_depend> <!-- rhoban/geometry -->
<!--    <build_depend>rhoban_graphs</build_depend> --> <!-- rhoban/graphs -->
    <build_depend>ssl_client</build_depend>
    <build_depend>tclap</build_depend> <!-- rhobandeps/tclap -->
    <build_depend>jsoncpp</build_depend> <!-- rhobandeps/jsoncpp -->

    <run_depend>rhoban_geometry</run_depend>
<!-->    <run_depend>rhoban_graphs</run_depend> -->
    <run_depend>ssl_client</run_depend>
    <run_depend>tclap</run_depend>
    <run_depend>jsoncpp</run_depend>
</package>
