<?xml version="1.0"?>
<package>
    <name>ssl_client</name>
    <version>0.0.0</version>
    <description>Rhoban client for SSL</description>

    <maintainer email="g.passault@gmail.com">Grégoire Passault</maintainer>

    <license>GPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>RhobanUtils</build_depend> <!-- rhobanproject/rhobanutils -->
    <build_depend>serial</build_depend> <!-- rhobandeps/serial -->

    <run_depend>RhobanUtils</run_depend>
    <run_depend>serial</run_depend>
</package>
