<?xml version="1.0"?>
<package>
    <name>ssl_client</name>
    <version>0.0.0</version>
    <description>Rhoban client for SSL</description>

    <maintainer email="g.passault@gmail.com">Grégoire Passault</maintainer>

    <license>GPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rhoban_geometry</build_depend> <!-- rhoban/geometry -->
    <build_depend>serial</build_depend> <!-- rhobandeps/serial -->
    <build_depend>jsoncpp</build_depend> <!-- rhobandeps/jsoncpp -->

    <run_depend>rhoban_geometry</run_depend>
    <run_depend>serial</run_depend>
    <run_depend>jsoncpp</run_depend>
</package>
