<?xml version="1.0"?>
<package>
    <name>ssl_viewer</name>
    <version>0.0.0</version>
    <description>Rhoban viewer for SSL</description>

    <maintainer email="g.passault@gmail.com">Grégoire Passault</maintainer>

    <license>GPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rhoban_utils</build_depend> <!-- rhoban/utils -->
    <build_depend>tclap</build_depend> <!-- rhobandeps/tclap -->
    <build_depend>ssl_ai</build_depend>
    <build_depend>ssl_client</build_depend>

    <run_depend>rhoban_utils</run_depend>
    <run_depend>tclap</run_depend>
    <run_depend>ssl_ai</run_depend>
    <run_depend>ssl_client</run_depend>
</package>
