<?xml version="1.0"?>
<package>
    <name>ssl_referee</name>
    <version>0.0.0</version>
    <description>Rhoban referee for SSL</description>

    <maintainer email="g.passault@gmail.com">Grégoire Passault</maintainer>

    <license>GPL</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>ssl_refbox</build_depend> <!-- rhobandeps/ssl-refbox -->
</package>
